set copy of